# tietoa-workload

back/: Untitled.ipynb  pyproject.toml  railway.json
back/back/: config.py  loads.py  main.py  models.py  mongo.py
front/: index.html  package-lock.json  package.json
front/src/: App.css  App.jsx  config.js  index.css
front/src/components/: ActivityChart.jsx  AsyncError.jsx  CSVDownload.jsx  ClickableCanvas.jsx  Column.jsx  CommentInput.jsx  Comments.jsx  DateRangeFilter.jsx  DateRangeFilterWidget.jsx  Density.jsx  FilteredDashboard.jsx  Footer.jsx  GroupedTimelineChart.jsx  Header.jsx  Load.jsx  LoadsWithGUI.jsx  Mark.jsx  MentalloadTimelineByTagChart.jsx  MentaloadRankChart.jsx  NavigationColumn.jsx  NoFilter.jsx  OverallPage.jsx  Persons.jsx  RankChartByTag.jsx  RouteError.jsx  StatisticWidget.jsx  TagFilter.jsx  TagPage.jsx  TagPageFilter.jsx  TestFilter.jsx  TestFilterWidget.jsx  Timeline.jsx  TimelineChart.jsx  TrellisChart.jsx  Trend.jsx  UserFilter.jsx  UserListPage.jsx  UserListWidget.jsx  UserPage.jsx  UserPageFilter.jsx  (+3 more)
front/src/components/notifications/: Loading.jsx  NoData.jsx
front/src/hooks/: useTags.jsx
front/src/routes/: dashboard.jsx  data.jsx  display.jsx  error.jsx  fast_input.jsx  input.jsx  root.jsx  tag.jsx  user.jsx  users.jsx
front/src/services/: person.js
front/src/styles/: navigation.css  profile.css
front/src/utils/: impute.js
