[tool.poetry]
name = "back"
version = "0.1.0"
description = ""
authors = ["Ville <ville.reima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
httpx = "^0.26.0"
pydantic = "^2.5.3"
pandas = "^2.2.0"
loguru = "^0.7.2"
uvicorn = "^0.27.0"
python-dotenv = "^1.0.1"
arrow = "^1.3.0"
pydantic-settings = "^2.1.0"
motor = "^3.3.2"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
ruff = "^0.1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.ruff]
target-version = "py311"
select = [
    "A",
    "B",
    "E",
    "F",
    "ISC",
    "UP",
    "RUF",
    "SIM",
    "ARG",
    "PD",
    "PLE",
    "PLR",
    "PLW"
]
ignore = [
    "E712",
    "E501"
]